# seed-search

./: .env  .gitignore  Cargo.toml
migrations/2021-06-25-184309_v1/: down.sql  up.sql
migrations/2021-07-03-033153_indexes/: down.sql  up.sql
migrations/2021-07-03-171311_fun/: down.sql  up.sql
queries/: acquirement.sql  all-fun.sql  armour.sql  asdf.sql  early-fun.sql  free.sql  fun-early-collections.sql  load-favorites.sql  octo-bling.sql  octo.sql  other-weapons.sql  randarts.sql  regen.sql  sample-queries.sql  seed-items.sql  shadows.sql  slither.sql  treasure.sql  unrands.sql  weapons.sql
scripts/: pre-gen.sh  run-scrape.sh  scrape-seed.lua
src/: lib.rs  models.rs  schema.rs
